--- a/src/components/SearchBar/search.style.scss
+++ b/src/components/SearchBar/search.style.scss
@@ -1,12 +1,12 @@
 .search-container {
   form {
-    width: 50%;
+    width: 40%;
     margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 
     input {
-      width: 40%;
+      width: 82%;
       padding: 0.375rem 0.75rem;
       font-size: 1rem;
       font-weight: 400;
@@ -16,11 +16,6 @@
       background-clip: padding-box;
       border: 1px solid #ced4da;
       border-radius: 2.5px;
-      margin-right: 1.8rem;
-
-      //   &:active {
-      //       border: 2px solid red;
-      //   }
     }
 
     button {
@@ -30,9 +25,59 @@
       border: 2px solid #90caf9;
       background: #141414;
       span {
-          color: #90caf9;
+        color: #90caf9;
         font-weight: 500;
         font-size: 1.4rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 75rem) {
+  .search-container {
+    form {
+      input {
+        width: 80%;
+      }
+    }
+  }
+}
+
+@media (max-width: 69rem) {
+  .search-container {
+    form {
+      width: 55%;
+    }
+  }
+}
+
+@media (max-width: 50rem) {
+  .search-container {
+    form {
+      width: 80%;
+      input {
+        width: 85%;
+      }
+    }
+  }
+}
+
+@media (max-width: 40rem) {
+  .search-container {
+    form {
+      width: 90%;
+      input {
+        width: 78%;
+      }
+    }
+  }
+}
+
+@media (max-width: 25rem) {
+  .search-container {
+    form {
+      input {
+        width: 74%;
       }
     }
   }
